cloud
venv) phat@phat:~/Documents/ce_comedians/project $ python3 main.py
  File "/home/phat/Documents/ce_comedians/project/main.py", line 627
    distracted_now = abs(yaw_rel) > (YAW_EXIT_THRESHOLD if distracted_state else YAWYAW_ENTER_THRESHOLD := YAW_ENTER_THRESHOLD)
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot use assignment expressions with conditional expression
